syntax = "proto3";

package pb;

import "ticker.proto";

option go_package = "github.com/colin-mcl/stocks/pb";

message GetTickerRequest {
    string symbol = 1;
}

message GetTickerResponse {
    Ticker ticker = 1;
}

