syntax = "proto3";

package pb;

import "rpc_get_ticker.proto";

option go_package = "github.com/colin-mcl/stocks/pb";

service Stocks {
    rpc GetTicker (GetTickerRequest) returns (GetTickerResponse) {}
}